# diffcurve

./: .gitignore  README.md  benchmark_performance.py  conftest.py  fix_floor.py  generate_reference_data.py  main.py  pyproject.toml  pytest.ini  test_machine_precision.py  test_shape_compatibility.py  test_wedge_tick_precision.py
.github/workflows/: run_tests.yml
diffcurve/fdct2d/: __init__.py  curvelet_2d.py  fdct_wrapping.py  fdct_wrapping_window.py  ifdct_wrapping.py  jax_frontend.py  numpy_frontend.py  torch_frontend.py
examples/: debug_initialization.py  debug_scales.py  demo-compare-frontends.ipynb  test.py  test_basic_reconstruction.py  test_proper_reconstruction.py  test_simple.py
tests/: __init__.py  conftest.py  test_curvelet_transform.py  test_edge_cases.py  test_matlab_edge_cases.py
tests/reference_data/: matlab_angles_12_64x64.npz  matlab_angles_24_64x64.npz  matlab_angles_32_64x64.npz  matlab_angles_8_64x64.npz  matlab_constant_5_64x64.npz  matlab_delta_63x63.npz  matlab_divisible_by_3_both.npz  matlab_divisible_by_3_height.npz  matlab_divisible_by_3_width.npz  matlab_finest_1_63x66.npz  matlab_finest_1_64x64.npz  matlab_finest_1_real_64x64.npz  matlab_nonsquare_48x63.npz  matlab_nonsquare_63x96.npz  matlab_real_63x66.npz  matlab_real_angles_12.npz  matlab_scales_2_128x128.npz  matlab_scales_4_128x128.npz  matlab_scales_5_256x256.npz
