[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "diffcurve"
version = "0.1"
description = "diffcurve"
authors = [
    {name = "Tianlin Liu", email = "t.liu@unibas.ch"}
]
license = {text = "MIT"}
requires-python = ">=3.7"
dependencies = [
    "numpy>=1.21.6",
    "scipy>=1.7.3",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["diffcurve*"]

[dependency-groups]
dev = [
    "ipykernel>=6.16.2",
    "jax>=0.3.25",
    "matplotlib>=3.5.3",
    "opencv-python>=4.11.0.86",
    "torch>=1.13.1",
]
